# stringutil

./: CMakeLists.txt  README.en.md  README.md
stringutil/: filenameutil.h  interface.h  util.h
stringutil/impl/: filenameutil.cpp  util.cpp
